--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)" />
-    <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" href="/favicon-dark.png" media="(prefers-color-scheme: light)" />
+    <link rel="icon" href="/favicon-light.png" media="(prefers-color-scheme: dark)" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>智面星途</title>
   </head>
